Snap-diff Implementation